// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should allow async elements in prepared nodes 1`] = `
<div>
  <div>
    
    
    
  </div>
</div>
`;

exports[`render should allow async elements in prepared nodes 2`] = `
<div>
  <div>
    <div>
      Beta
      <p>
        44
      </p>
    </div>
    <div>
      Alpha
      <p>
        44
      </p>
    </div>
  </div>
</div>
`;

exports[`render should rendering akta blueprint 1`] = `
<div>
  <p>
    Blueprint
  </p>
</div>
`;

exports[`render should use prepared rendering akta blueprint 1`] = `
<div>
  <div>
    <div>
      Alpha
      <p>
        sub-fn
      </p>
    </div>
    <div>
      Beta
      <p>
        sub-fn
      </p>
    </div>
    <div>
      Theta
      <p>
        sub-fn
      </p>
    </div>
  </div>
</div>
`;

exports[`render should use prepared rendering akta blueprint 2`] = `
<div>
  <div>
    <div>
      Theta
      <p>
        sub-fn
      </p>
    </div>
    <div>
      Beta
      <p>
        sub-fn
      </p>
    </div>
    <div>
      Alpha
      <p>
        sub-fn
      </p>
    </div>
  </div>
</div>
`;

exports[`render should use prepared rendering akta blueprint 3`] = `
<div>
  <div>
    <div>
      Beta
      <p>
        sub-fn
      </p>
    </div>
    <div>
      Theta
      <p>
        sub-fn
      </p>
    </div>
    <div>
      Alpha
      <p>
        sub-fn
      </p>
    </div>
  </div>
</div>
`;
